--- a/Dockerfile1
+++ b/Dockerfile1
@@ -1,12 +1,13 @@
 FROM ubuntu:16.04
+RUN apt-get clean && apt-get update
 RUN apt-get update
-RUN apt-get install git
-RUN apt-get install default-jdk
-RUN apt-get install maven
-RUN apt-get install tomcat9
-RUN git clone https://github.com/boxfuse/boxfuse-sample-java-war-hello.git && \
-    cd boxfuse-sample-java-war-hello/ && \
-    mvn package && \
-    cp boxfuse-sample-java-war-hello/target/hello-*.war /var/lib/tomcat9/webapps/
+RUN apt-get install git -y
+RUN apt-get install default-jdk -y
+RUN apt-get install maven -y
+RUN apt-get install tomcat8 -y
+RUN git clone https://github.com/boxfuse/boxfuse-sample-java-war-hello.git
+RUN cd boxfuse-sample-java-war-hello/
+RUN mvn package
+RUN cp /target/hello-*.war /var/lib/tomcat8/webapps/
 EXPOSE 80
 CMD ["catalina.sh", "run"]
